crates/ty_python_semantic/resources/mdtest/snapshots/super.md_-_Super_-_Basic_Usage_-_Metaclasses_(faeb52a8cd1533b3).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: super.md - Super - Basic Usage - Metaclasses
mdtest path: crates/ty_python_semantic/resources/mdtest/class/super.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, TypeVar
 2 | 
 3 | _TMeta = TypeVar("_TMeta", bound="BaseWithMeta")
 4 | 
 5 | class MetaBase(type):
 6 |     meta_base_value: int = 1
 7 | 
 8 |     def plain(self: type[_TMeta]) -> type[_TMeta]:
 9 |         return self
10 | 
11 | class Meta(MetaBase):
12 |     # error: [invalid-method-override]
13 |     def __call__(cls: type[_TMeta], *args: Any, **kwargs: Any) -> _TMeta:
14 |         reveal_type(super(Meta, cls).meta_base_value)  # revealed: int
15 |         reveal_type(super(Meta, cls).plain())  # revealed: type[_TMeta@__call__]
16 |         return super().__call__(*args, **kwargs)
17 | 
18 | class BaseWithMeta(metaclass=Meta):
19 |     pass
20 | 
21 | class SubWithMeta(BaseWithMeta):
22 |     def extra(self) -> int:
23 |         return 42
24 | 
25 | reveal_type(SubWithMeta())  # revealed: SubWithMeta
26 | SubWithMeta().extra()
27 | reveal_type(super(Meta, BaseWithMeta).meta_base_value)  # revealed: int
28 | 
29 | class OtherMeta(type):
30 |     pass
31 | 
32 | class OtherBase(metaclass=OtherMeta):
33 |     pass
34 | 
35 | super(Meta, OtherBase)  # error: [invalid-super-argument]
36 | 
37 | T = TypeVar("T", bound=int)
38 | 
39 | class BoundIntMeta(type):
40 |     # error: [invalid-method-override]
41 |     def __call__(cls: type[T]) -> T:
42 |         return super(BoundIntMeta, cls).__call__()  # error: [invalid-super-argument]
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `__call__`
   --> src/mdtest_snippet.py:13:9
    |
 13 |     def __call__(cls: type[_TMeta], *args: Any, **kwargs: Any) -> _TMeta:
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `type.__call__`
    |
   ::: stdlib/builtins.pyi:284:9
    |
284 |     def __call__(self, *args: Any, **kwds: Any) -> Any:
    |         ---------------------------------------------- `type.__call__` defined here
info: This violates the Liskov Substitution Principle

```

```
error[invalid-super-argument]: `<class 'OtherBase'>` is not an instance or subclass of `<class 'Meta'>` in `super(<class 'Meta'>, <class 'OtherBase'>)` call
  --> src/mdtest_snippet.py:35:1
   |
35 | super(Meta, OtherBase)  # error: [invalid-super-argument]
   | ^^^^^^^^^^^^^^^^^^^^^^

```

```
error[invalid-method-override]: Invalid override of method `__call__`
   --> src/mdtest_snippet.py:41:9
    |
 41 |     def __call__(cls: type[T]) -> T:
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `type.__call__`
    |
   ::: stdlib/builtins.pyi:284:9
    |
284 |     def __call__(self, *args: Any, **kwds: Any) -> Any:
    |         ---------------------------------------------- `type.__call__` defined here
info: This violates the Liskov Substitution Principle

```

```
error[invalid-super-argument]: `type[T@__call__]` is not an instance or subclass of `<class 'BoundIntMeta'>` in `super(<class 'BoundIntMeta'>, type[T@__call__])` call
  --> src/mdtest_snippet.py:42:16
   |
42 |         return super(BoundIntMeta, cls).__call__()  # error: [invalid-super-argument]
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
info: Type variable `T` has upper bound `int`
info: `type[int]` is not an instance or subclass of `<class 'BoundIntMeta'>`

```
